--- a/custom-notebooks/01_python_recap_exercises.ipynb
+++ b/custom-notebooks/01_python_recap_exercises.ipynb
@@ -62,11 +62,11 @@
       "execution_count": 1,
       "id": "d77123bc",
       "metadata": {
-        "id": "d77123bc",
-        "outputId": "0cc1902c-a20c-413a-8929-3719d9b57577",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "d77123bc",
+        "outputId": "0cc1902c-a20c-413a-8929-3719d9b57577"
       },
       "outputs": [
         {
@@ -125,11 +125,11 @@
       "execution_count": 2,
       "id": "8913c95f",
       "metadata": {
-        "id": "8913c95f",
-        "outputId": "174bc19d-ffea-43d8-8d7c-4b2d598b8911",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8913c95f",
+        "outputId": "174bc19d-ffea-43d8-8d7c-4b2d598b8911"
       },
       "outputs": [
         {
@@ -189,11 +189,11 @@
       "execution_count": 4,
       "id": "a75b8d87",
       "metadata": {
-        "id": "a75b8d87",
-        "outputId": "04c121bb-6ea4-4a3b-94cc-b41213afa47a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a75b8d87",
+        "outputId": "04c121bb-6ea4-4a3b-94cc-b41213afa47a"
       },
       "outputs": [
         {
@@ -250,11 +250,11 @@
       "execution_count": 5,
       "id": "ac0b58bf",
       "metadata": {
-        "id": "ac0b58bf",
-        "outputId": "42bf6dc8-7e65-4107-e1a3-e97310fe59da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ac0b58bf",
+        "outputId": "42bf6dc8-7e65-4107-e1a3-e97310fe59da"
       },
       "outputs": [
         {
@@ -310,11 +310,11 @@
       "execution_count": 7,
       "id": "e34aa18a",
       "metadata": {
-        "id": "e34aa18a",
-        "outputId": "c2897f13-a3e9-4919-848b-20179f45a03d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e34aa18a",
+        "outputId": "c2897f13-a3e9-4919-848b-20179f45a03d"
       },
       "outputs": [
         {
@@ -367,11 +367,11 @@
       "execution_count": 9,
       "id": "b4f1f620",
       "metadata": {
-        "id": "b4f1f620",
-        "outputId": "66329318-1cae-49d1-8663-0055c82c01ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b4f1f620",
+        "outputId": "66329318-1cae-49d1-8663-0055c82c01ab"
       },
       "outputs": [
         {
@@ -428,14 +428,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 18,
       "id": "e1ace20a",
       "metadata": {
-        "id": "e1ace20a",
-        "outputId": "3785a2ef-52bb-4e9f-a421-8edd958a6a76",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e1ace20a",
+        "outputId": "6c1e3155-f82c-485f-ce38-680494947167"
       },
       "outputs": [
         {
@@ -454,7 +454,7 @@
         "    self.year = year\n",
         "\n",
         "  def info(self):\n",
-        "    return \"Brand: \" + self.brand + \" | Year: \" + str(self.year)\n",
+        "    return f\"Brand: {self.brand} | Year: {self.year}\"\n",
         "\n",
         "\n",
         "car1 = Car(\"BMW\", 2012)\n",
