--- a/custom-notebooks/03_advertising_hw.ipynb
+++ b/custom-notebooks/03_advertising_hw.ipynb
@@ -904,7 +904,6 @@
         "# Radio    :  17.511888641395615\n",
         "# Newspaper:  23.635705625160178\n",
         "\n",
-        "# Mean Squared Error ⇒ je kleiner, desto besser\n",
         "# TV hat den geringste MSE, Newspaper den höchsten → Newspaper liefert keinen praktisch erklärenden Nutzen; Radio hilft ein wenig\n",
         "\n",
         "# Comment on the results.\n",
@@ -1235,7 +1234,7 @@
         "print(\"Multiple regression MSE: \", mse_tr_multi)\n",
         "\n",
         "# Multiple regression R2:   0.8934006397815405 -> erklärt ca. 89%\n",
-        "# Multiple regression MSE:  2.952755722412376 -> sehr geringe durchschnittliche Vorhersagefehler\n"
+        "# Multiple regression MSE:  2.952755722412376\n"
       ],
       "id": "Sx47228Tcc5q"
     },
@@ -1269,7 +1268,7 @@
         "print(\"Multiple regression MSE: \", mse_ts_multi)\n",
         "\n",
         "# Multiple regression R2:   0.9034495005656622 -> erklärt ca. 90%\n",
-        "# Multiple regression MSE:  2.4406300760885373 -> ebenfalls stabil\n"
+        "# Multiple regression MSE:  2.4406300760885373 -> ca. gleich wie bei Trainingsdaten\n"
       ],
       "id": "BA_SX6cNcc5q"
     },
