--- a/custom-notebooks/03_advertising_hw.ipynb
+++ b/custom-notebooks/03_advertising_hw.ipynb
@@ -1383,9 +1383,9 @@
         "\n",
         "plt.show();\n",
         "\n",
-        "# Die Residuals liegen  verstreut um die Nulllinie, ohne sichtbares Muster — kein Trend\n",
-        "# -> das bedeutet, dass das Modell linear ist, gut spezifiziert ist und keine systematischen Fehler macht\n",
-        "# Residuals sehen zufällig aus → gut\n",
+        "# Die Residuals liegen  verstreut um die Nulllinie, besser als beim vorherigen Beispiel\n",
+        "# -> das bedeutet, dass das Modell linear ist, gut spezifiziert ist und wenig systematische Fehler macht\n",
+        "# Residuals sehen relative zufällig aus → relativ gut\n",
         "\n",
         "############################################################################################################################################\n",
         "\n",
@@ -1408,11 +1408,7 @@
         "\n",
         "# Optimiert Abstände zwischen Subplots\n",
         "plt.tight_layout()\n",
-        "plt.show();\n",
-        "\n",
-        "# Für alle drei Features zeigt sich das gleiche\n",
-        "# Die Residuals sind zufällig über und unter Null verteilt, ohne Struktur oder Trend.\n",
-        "# das Modell beschreibt den Zusammenhang zwischen Werbebudget und Verkäufen gut, und es fehlen keine zusätzlichen Terme oder Interaktionen."
+        "plt.show();"
       ],
       "metadata": {
         "colab": {
@@ -1610,10 +1606,10 @@
           "height": 1000
         },
         "id": "5EKz-MrxqrP3",
-        "outputId": "6d154f2c-563a-4e25-a496-f13b34ae726f"
+        "outputId": "e4f8e4ed-8068-436c-91d9-58b691728d0f"
       },
       "id": "5EKz-MrxqrP3",
-      "execution_count": 37,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -1682,7 +1678,7 @@
         "\n",
         "- R2 auf den Trainingsdaten steigt von **~0.89** (ohne Interaktionen) auf **~0.96**.\n",
         "- R2 auf den Testdaten steigt von **~0.90** auf **~0.98**.\n",
-        "- MSE sinkt stark, sowohl auf Training als auch Test.\n",
+        "- MSE sinkt stark, sowohl auf Training als auch Test. -> sagt allerdings nicht sehr viel aus, da man die Skalierung nicht einschätzen kann\n",
         "\n",
         "Kombinationen von Werbemitteln (z. B. TV x Radio) haben einen zusätzlichen Effekt auf den Umsatz, der nicht durch die einzelnen Medien alleine erklärt werden kann.\n",
         "\n",
